# internal/transport/http/server.go
@@ -61,6 +61,9 @@ func NewServer(lc fx.Lifecycle, cfg config.Config, handler *Handler, authService
 	api.POST("/version", handler.Version)
 	api.POST("/me", handler.Me)
 	api.POST("/config/entries/put-draft", handler.PutConfig)
+	api.POST("/config/entries/submit", handler.SubmitConfig)
+	api.POST("/config/entries/approve", handler.ApproveConfig)
+	api.POST("/config/entries/reject", handler.RejectConfig)
 	api.POST("/config/entries/publish", handler.PublishConfig)
 	api.POST("/config/entries/rollback", handler.RollbackConfig)
 	api.POST("/config/resolve", handler.ResolveConfig)
